RESOLVED FIXED13453
Control clip isn't applied to children's backgrounds, outlines and floats
https://bugs.webkit.org/show_bug.cgi?id=13453
Summary Control clip isn't applied to children's backgrounds, outlines and floats
mitz
Reported 2007-04-23 04:06:37 PDT
See attachment 14136 [details] in bug 13443. Patch forthcoming.
Attachments
More clipping (33.45 KB, patch)
2007-04-23 04:16 PDT, mitz
mitz: review+
mitz
Comment 1 2007-04-23 04:16:46 PDT
Created attachment 14144 [details] More clipping
Dave Hyatt
Comment 2 2007-04-23 13:56:07 PDT
Comment on attachment 14144 [details] More clipping Need to handle hit testing too.
Dave Hyatt
Comment 3 2007-04-23 14:00:40 PDT
Comment on attachment 14144 [details] More clipping Feel free to turn my - into a + if hit testing isn't broken. r=me.
mitz
Comment 4 2007-04-23 14:03:03 PDT
Comment on attachment 14144 [details] More clipping (In reply to comment #3) > Feel free to turn my - into a + if hit testing isn't broken. It isn't. r=you :-)
Mark Rowe (bdash)
Comment 5 2007-04-24 05:49:04 PDT
Landed in r21069.
Note You need to log in before you can comment on or make changes to this bug.