2007-04-24  Mitz Pettel  <mitz@webkit.org>

Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13453
          Control clip isn't applied to children's backgrounds, outlines and floats

        Test: fast/forms/control-clip.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::paint): Apply the clip in all phases that paint
        children. Split PaintPhaseOutline and PaintPhaseChildBlockBackground into
        two phases each, applying the clip only to the children.
        * rendering/RenderListBox.cpp:
        (WebCore::RenderListBox::paintObject): Treat the scrollbar as part of the
        background rather than as a child's background, now that children are
        clipped out.

2007-04-24  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Dave Hyatt.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=13453
          Control clip isn't applied to children's backgrounds, outlines and floats

        * fast/forms/control-clip-expected.checksum: Added.
        * fast/forms/control-clip-expected.png: Added.
        * fast/forms/control-clip-expected.txt: Added.
        * fast/forms/control-clip.html: Added.


Canonical link: https://commits.webkit.org/17592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21069 268f45cc-cd09-0410-ab3c-d52691b4dbfc